--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,8 +17,8 @@
         android:title="Shuffle" />
 
     <item
-        android:id="@+id/navigation_account"
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="@string/title_account" />
+        android:title="@string/title_profile" />
 
 </menu>
