--- a/app/src/main/res/layout/results_card.xml
+++ b/app/src/main/res/layout/results_card.xml
@@ -14,7 +14,7 @@
             android:layout_height="100dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="Results Image"
-            android:src="@drawable/png_movies"/> <!-- Temporary photo -->
+            android:icon="@drawable/ic_purple_reel" /> <!-- Temporary photo -->
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,13 +24,32 @@
             android:layout_toEndOf="@+id/image_view"
             android:textSize="18sp"
             android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_genre"
+            android:layout_toEndOf="@id/image_view"
+            android:layout_below="@id/text_view_1"
+            android:text="Genre"
+            android:paddingTop="5dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_view_2"
             android:layout_toEndOf="@id/image_view"
-            android:layout_below="@id/text_view_1"
-            android:text="Line 2"
+            android:layout_below="@id/text_genre"
+            android:text="Year"
             android:paddingTop="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_rating"
+            android:layout_toEndOf="@id/image_view"
+            android:layout_below="@id/text_view_2"
+            android:text="Rating"
+            android:paddingTop="5dp"/>
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
