--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+    <!-- Change this to the nice photo i found earlier -->
 
     <TextView
         android:id="@+id/text_Home"
@@ -20,28 +21,42 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.237" />
+        app:layout_constraintVertical_bias="0.159" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="121dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="28dp"
+        android:src="@drawable/ic_purple_reel"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home" />
 
     <Button
         android:id="@+id/btn_start"
-        android:layout_width="200dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="197dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/alata"
-        android:text="@string/start_the_quiz"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintLeft_toLeftOf="@id/text_Home"
-        app:layout_constraintRight_toRightOf="@id/text_Home"
-        app:layout_constraintTop_toBottomOf="@id/text_Home" />
+        android:text="@string/start"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/btn_pickForMe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Just Pick for Me!"
+        android:layout_width="160dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/alata"
+        android:text="Shuffle"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/btn_start" />
 
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="391dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
