--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,25 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="267dp"
-        android:layout_height="54dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="189dp" />
+    <TextView
+        android:id="@+id/text_Home"
+        android:layout_width="260dp"
+        android:layout_height="62dp"
+        android:fontFamily="@font/alata"
+        android:text=" What2Watch"
+        android:textColor="#000000"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.097" />
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="138dp"
         android:layout_height="43dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="text"
         android:text="Username"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="113dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress3"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        tools:layout_editor_absoluteY="156dp" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress3"
@@ -32,8 +40,8 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="186dp"
-        tools:layout_editor_absoluteY="109dp" />
+        tools:layout_editor_absoluteX="201dp"
+        tools:layout_editor_absoluteY="156dp" />
 
     <TextView
         android:id="@+id/textView7"
@@ -43,46 +51,9 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="300dp" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date of Birth"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="350dp" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gender"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="262dp"
-        tools:layout_editor_absoluteY="350dp" />
-
-    <EditText
-        android:id="@+id/editTextDate"
-        android:layout_width="135dp"
-        android:layout_height="44dp"
-        android:ems="10"
-        android:hint="mm/dd/yyyy"
-        android:inputType="date"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="390dp" />
-
-    <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="168dp"
-        android:layout_height="42dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Female"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="390dp" />
+        tools:layout_editor_absoluteY="340dp" />
 
     <EditText
         android:id="@+id/editTextTextPostalAddress"
@@ -91,8 +62,46 @@
         android:ems="10"
         android:inputType="textPostalAddress"
         android:text="Country"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="471dp" />
+        tools:layout_editor_absoluteX="106dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date of Birth"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="61dp"
+        tools:layout_editor_absoluteY="390dp" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="135dp"
+        android:layout_height="44dp"
+        android:ems="10"
+        android:hint="mm/dd/yyyy"
+        android:inputType="date"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="430dp" />
+
+    <EditText
+        android:id="@+id/editTextText2"
+        android:layout_width="168dp"
+        android:layout_height="42dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Female"
+        tools:layout_editor_absoluteX="217dp"
+        tools:layout_editor_absoluteY="430dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gender"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="278dp"
+        tools:layout_editor_absoluteY="390dp" />
 
     <Button
         android:id="@+id/button"
@@ -102,10 +111,10 @@
         app:iconPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.818" />
+        app:layout_constraintVertical_bias="0.877" />
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -114,9 +123,20 @@
         android:text="I agree to the terms of use and privacy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.165"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintVertical_bias="0.947" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword2"
+        android:layout_width="267dp"
+        android:layout_height="54dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
+        app:layout_constraintStart_toStartOf="@+id/editTextText"
+        tools:layout_editor_absoluteY="253dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
