--- a/app/src/main/res/layout/results_card.xml
+++ b/app/src/main/res/layout/results_card.xml
@@ -14,12 +14,12 @@
             android:layout_height="100dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="Results Image"
-            android:icon="@drawable/ic_purple_reel" /> <!-- Temporary photo -->
+            android:icon="@drawable/filmreel" /> <!-- Temporary photo -->
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_view_1"
+            android:id="@+id/text_name"
             android:text="Movie Title"
             android:layout_toEndOf="@+id/image_view"
             android:textSize="18sp"
@@ -28,16 +28,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/text_type1"
+            android:layout_toEndOf="@id/image_view"
+            android:layout_below="@id/text_name"
+            android:text="Type"
+            android:paddingTop="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/text_genre"
             android:layout_toEndOf="@id/image_view"
-            android:layout_below="@id/text_view_1"
+            android:layout_below="@id/text_type1"
             android:text="Genre"
             android:paddingTop="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_view_2"
+            android:id="@id/text_year"
             android:layout_toEndOf="@id/image_view"
             android:layout_below="@id/text_genre"
             android:text="Year"
@@ -47,7 +56,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/text_rating"
             android:layout_toEndOf="@id/image_view"
-            android:layout_below="@id/text_view_2"
+            android:layout_below="@id/text_year"
             android:text="Rating"
             android:paddingTop="5dp"/>
 
