--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="button_default_color">#ae91d4</color>
+    <color name="customColor">#ae91d4</color> <!-- Change color as needed -->
+
 
 </resources>
