--- a/app/src/main/res/layout/fragment_q4.xml
+++ b/app/src/main/res/layout/fragment_q4.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.q4rating.q4Fragment">
 
+
     <TextView
         android:id="@+id/text_Home"
         android:layout_width="260dp"
@@ -19,69 +20,60 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13" />
-
-
-    <TextView
-        android:id="@+id/text_rating"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="44dp"
-        android:fontFamily="@font/alata"
-        android:text=" IMBD Rating Slider"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintLeft_toLeftOf="@id/text_Home"
-        app:layout_constraintRight_toRightOf="@id/text_Home"
-        app:layout_constraintTop_toBottomOf="@id/text_Home" />
-
-    <Button
-        android:id="@+id/btn_skip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Don't Care? Skip!"
-        app:layout_constraintEnd_toEndOf="@+id/range_slider2"
-        app:layout_constraintStart_toStartOf="@+id/range_slider2"
-        app:layout_constraintTop_toBottomOf="@+id/range_slider2" />
-
-    <TextView
-        android:id="@+id/text_Q4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
-
-    <com.google.android.material.slider.RangeSlider
-
-        android:id="@+id/range_slider2"
-        android:layout_width="350dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="28dp"
-        android:stepSize="5.0"
-        android:valueFrom="0.0"
-        android:valueTo="100.0"
-        app:layout_constraintEnd_toEndOf="@+id/text_rating"
-        app:layout_constraintStart_toStartOf="@+id/text_rating"
-        app:layout_constraintTop_toBottomOf="@+id/text_rating"
-        app:values="@array/initial_slider_values" />
+        app:layout_constraintVertical_bias="0.237" />
 
     <Button
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
-        app:layout_constraintEnd_toEndOf="@+id/range_slider2"
-        app:layout_constraintStart_toStartOf="@+id/range_slider2"
-        app:layout_constraintTop_toBottomOf="@+id/btn_skip" />
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="449dp" />
+    <!--
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider"
+        android:layout_width="350dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="24dp"
+        android:stepSize="5.0"
+        android:valueFrom="0.0"
+        android:valueTo="100.0"
+        app:layout_constraintEnd_toEndOf="@+id/text_rating"
+        app:layout_constraintStart_toStartOf="@+id/text_rating"
+        app:layout_constraintTop_toBottomOf="@+id/text_rating"
+        app:value="@array/initial_slider_values" /> -->
+
+<TextView
+     android:id="@+id/text_rating"
+     android:layout_width="270dp"
+     android:layout_height="60dp"
+     android:layout_marginTop="48dp"
+     android:fontFamily="@font/alata"
+     android:text=" IMBD Rating Slider"
+     android:textColor="#000000"
+     android:textSize="30sp"
+     app:layout_constraintLeft_toLeftOf="@id/text_Home"
+     app:layout_constraintRight_toRightOf="@id/text_Home"
+     app:layout_constraintTop_toBottomOf="@id/text_Home" />
+
+ <TextView
+     android:id="@+id/text_Q4"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="8dp"
+     android:layout_marginTop="8dp"
+     android:layout_marginEnd="8dp"
+     android:textAlignment="center"
+     android:textSize="20sp"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintHorizontal_bias="0.0"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:layout_constraintVertical_bias="0.977" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
