--- a/app/src/main/res/layout/movies_shows_card.xml
+++ b/app/src/main/res/layout/movies_shows_card.xml
@@ -8,13 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp">
+
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="Results Image"
-            android:icon="@drawable/filmreel" /> <!-- Temporary photo -->
+            android:icon="@drawable/ic_reel" /> <!-- Temporary photo -->
 
         <TextView
             android:layout_width="wrap_content"
