--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="text_year" type="id" />
+    <!-- <item name="slider" type="id">slider</item> -->
 </resources>
