Deleted not needed xml files

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -72,13 +72,13 @@
         android:id="@+id/text_editProfile"
         android:layout_width="180dp"
         android:layout_height="62dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="104dp"
+        android:clickable="true"
         android:fontFamily="@font/alata"
+        android:onClick="onEditProfileClick"
         android:text="Edit Profile"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:clickable="true"
-        android:onClick="onEditProfileClick"
         app:layout_constraintEnd_toEndOf="@+id/text_Home"
         app:layout_constraintHorizontal_bias="0.277"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,16 +120,16 @@
         android:id="@+id/text_Logout"
         android:layout_width="180dp"
         android:layout_height="62dp"
-        android:layout_marginTop="468dp"
+        android:layout_marginTop="432dp"
+        android:clickable="true"
         android:fontFamily="@font/alata"
+        android:onClick="onLogoutClick"
         android:text="Logout"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:clickable="true"
-        android:onClick="onLogoutClick"
-        app:layout_constraintEnd_toEndOf="@+id/text_Home"
-        app:layout_constraintHorizontal_bias="0.329"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_Settings"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/text_Settings"
         app:layout_constraintTop_toBottomOf="@+id/text_Home" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
